Added the webform

--- a/travel_agent/.env.local
+++ b/travel_agent/.env.local
@@ -1,1 +1,2 @@
-GEMINI_API_KEY=PLACEHOLDER_API_KEY
+GEMINI_API_KEY=AIzaSyD4U8_tElblSNBVPN2dhax-nZ8MQSOxmLo
+VITE_N8N_CHAT_WEBHOOK=https://ysssfff2005.app.n8n.cloud/webhook/eec079f9-d08d-4adb-a040-321a6348083e/chat
